parser.output
Terminals unused in grammar

   VIEW
   NUMINT
   TIME
   RETURN


State 43 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement ';'
    3           | statements statement ';'
    4           | statements comentario_declaration
    5           | comentario_declaration

    6 statement: model_declaration
    7          | controller_declaration
    8          | field_declaration
    9          | route_declation
   10          | function_declation
   11          | relation_declaration

   12 comentario_declaration: COMENTARIO

   13 key: %empty
   14    | ',' FK '=' IDENTIFIER '.' IDENTIFIER ',' PK
   15    | ',' PK
   16    | ',' FK '=' IDENTIFIER '.' IDENTIFIER

   17 null: %empty
   18     | ',' NULO

   19 model_declaration: CRIE MODEL IDENTIFIER

   20 $@1: %empty

   21 field_declaration: CRIE CAMPO IDENTIFIER ':' type_specifier $@1 key null

   22 type_specifier: STRING
   23               | INTEGER
   24               | FLOAT
   25               | DATE
   26               | BOOL
   27               | TEXT

   28 relation_declaration: CRIE RELACAO IDENTIFIER ':' IDENTIFIER

   29 function_declation: FUNC CONTROLLER IDENTIFIER
   30                   | FUNC MODEL IDENTIFIER

   31 route_declation: CRIE ROUTE IDENTIFIER

   32 controller_declaration: CRIE CONTROLLER IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
',' (44) 14 15 16 18
'.' (46) 14 16
':' (58) 21 28
';' (59) 2 3
'=' (61) 14 16
error (256)
CRIE (258) 19 21 28 31 32
MODEL (259) 19 30
CONTROLLER (260) 29 32
VIEW (261)
CAMPO (262) 21
RELACAO (263) 28
NUMINT (264)
IDENTIFIER (265) 14 16 19 21 28 29 30 31 32
COMENTARIO (266) 12
NULO (267) 18
INTEGER (268) 23
STRING (269) 22
FLOAT (270) 24
DATE (271) 25
TIME (272)
BOOL (273) 26
TEXT (274) 27
ROUTE (275) 31
FUNC (276) 29 30
RETURN (277)
PK (278) 14 15
FK (279) 14 16


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1, on right: 0
statements (32)
    on left: 2 3 4 5, on right: 1 3 4
statement (33)
    on left: 6 7 8 9 10 11, on right: 2 3
comentario_declaration (34)
    on left: 12, on right: 4 5
key (35)
    on left: 13 14 15 16, on right: 21
null (36)
    on left: 17 18, on right: 21
model_declaration (37)
    on left: 19, on right: 6
field_declaration (38)
    on left: 21, on right: 8
$@1 (39)
    on left: 20, on right: 21
type_specifier (40)
    on left: 22 23 24 25 26 27, on right: 21
relation_declaration (41)
    on left: 28, on right: 11
function_declation (42)
    on left: 29 30, on right: 10
route_declation (43)
    on left: 31, on right: 9
controller_declaration (44)
    on left: 32, on right: 7


State 0

    0 $accept: . program $end

    CRIE        shift, and go to state 1
    COMENTARIO  shift, and go to state 2
    FUNC        shift, and go to state 3

    program                 go to state 4
    statements              go to state 5
    statement               go to state 6
    comentario_declaration  go to state 7
    model_declaration       go to state 8
    field_declaration       go to state 9
    relation_declaration    go to state 10
    function_declation      go to state 11
    route_declation         go to state 12
    controller_declaration  go to state 13


State 1

   19 model_declaration: CRIE . MODEL IDENTIFIER
   21 field_declaration: CRIE . CAMPO IDENTIFIER ':' type_specifier $@1 key null
   28 relation_declaration: CRIE . RELACAO IDENTIFIER ':' IDENTIFIER
   31 route_declation: CRIE . ROUTE IDENTIFIER
   32 controller_declaration: CRIE . CONTROLLER IDENTIFIER

    MODEL       shift, and go to state 14
    CONTROLLER  shift, and go to state 15
    CAMPO       shift, and go to state 16
    RELACAO     shift, and go to state 17
    ROUTE       shift, and go to state 18


State 2

   12 comentario_declaration: COMENTARIO .

    $default  reduce using rule 12 (comentario_declaration)


State 3

   29 function_declation: FUNC . CONTROLLER IDENTIFIER
   30                   | FUNC . MODEL IDENTIFIER

    MODEL       shift, and go to state 19
    CONTROLLER  shift, and go to state 20


State 4

    0 $accept: program . $end

    $end  shift, and go to state 21


State 5

    1 program: statements .
    3 statements: statements . statement ';'
    4           | statements . comentario_declaration

    CRIE        shift, and go to state 1
    COMENTARIO  shift, and go to state 2
    FUNC        shift, and go to state 3

    $default  reduce using rule 1 (program)

    statement               go to state 22
    comentario_declaration  go to state 23
    model_declaration       go to state 8
    field_declaration       go to state 9
    relation_declaration    go to state 10
    function_declation      go to state 11
    route_declation         go to state 12
    controller_declaration  go to state 13


State 6

    2 statements: statement . ';'

    ';'  shift, and go to state 24


State 7

    5 statements: comentario_declaration .

    $default  reduce using rule 5 (statements)


State 8

    6 statement: model_declaration .

    $default  reduce using rule 6 (statement)


State 9

    8 statement: field_declaration .

    $default  reduce using rule 8 (statement)


State 10

   11 statement: relation_declaration .

    $default  reduce using rule 11 (statement)


State 11

   10 statement: function_declation .

    $default  reduce using rule 10 (statement)


State 12

    9 statement: route_declation .

    $default  reduce using rule 9 (statement)


State 13

    7 statement: controller_declaration .

    $default  reduce using rule 7 (statement)


State 14

   19 model_declaration: CRIE MODEL . IDENTIFIER

    IDENTIFIER  shift, and go to state 25


State 15

   32 controller_declaration: CRIE CONTROLLER . IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 16

   21 field_declaration: CRIE CAMPO . IDENTIFIER ':' type_specifier $@1 key null

    IDENTIFIER  shift, and go to state 27


State 17

   28 relation_declaration: CRIE RELACAO . IDENTIFIER ':' IDENTIFIER

    IDENTIFIER  shift, and go to state 28


State 18

   31 route_declation: CRIE ROUTE . IDENTIFIER

    IDENTIFIER  shift, and go to state 29


State 19

   30 function_declation: FUNC MODEL . IDENTIFIER

    IDENTIFIER  shift, and go to state 30


State 20

   29 function_declation: FUNC CONTROLLER . IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 21

    0 $accept: program $end .

    $default  accept


State 22

    3 statements: statements statement . ';'

    ';'  shift, and go to state 32


State 23

    4 statements: statements comentario_declaration .

    $default  reduce using rule 4 (statements)


State 24

    2 statements: statement ';' .

    $default  reduce using rule 2 (statements)


State 25

   19 model_declaration: CRIE MODEL IDENTIFIER .

    $default  reduce using rule 19 (model_declaration)


State 26

   32 controller_declaration: CRIE CONTROLLER IDENTIFIER .

    $default  reduce using rule 32 (controller_declaration)


State 27

   21 field_declaration: CRIE CAMPO IDENTIFIER . ':' type_specifier $@1 key null

    ':'  shift, and go to state 33


State 28

   28 relation_declaration: CRIE RELACAO IDENTIFIER . ':' IDENTIFIER

    ':'  shift, and go to state 34


State 29

   31 route_declation: CRIE ROUTE IDENTIFIER .

    $default  reduce using rule 31 (route_declation)


State 30

   30 function_declation: FUNC MODEL IDENTIFIER .

    $default  reduce using rule 30 (function_declation)


State 31

   29 function_declation: FUNC CONTROLLER IDENTIFIER .

    $default  reduce using rule 29 (function_declation)


State 32

    3 statements: statements statement ';' .

    $default  reduce using rule 3 (statements)


State 33

   21 field_declaration: CRIE CAMPO IDENTIFIER ':' . type_specifier $@1 key null

    INTEGER  shift, and go to state 35
    STRING   shift, and go to state 36
    FLOAT    shift, and go to state 37
    DATE     shift, and go to state 38
    BOOL     shift, and go to state 39
    TEXT     shift, and go to state 40

    type_specifier  go to state 41


State 34

   28 relation_declaration: CRIE RELACAO IDENTIFIER ':' . IDENTIFIER

    IDENTIFIER  shift, and go to state 42


State 35

   23 type_specifier: INTEGER .

    $default  reduce using rule 23 (type_specifier)


State 36

   22 type_specifier: STRING .

    $default  reduce using rule 22 (type_specifier)


State 37

   24 type_specifier: FLOAT .

    $default  reduce using rule 24 (type_specifier)


State 38

   25 type_specifier: DATE .

    $default  reduce using rule 25 (type_specifier)


State 39

   26 type_specifier: BOOL .

    $default  reduce using rule 26 (type_specifier)


State 40

   27 type_specifier: TEXT .

    $default  reduce using rule 27 (type_specifier)


State 41

   21 field_declaration: CRIE CAMPO IDENTIFIER ':' type_specifier . $@1 key null

    $default  reduce using rule 20 ($@1)

    $@1  go to state 43


State 42

   28 relation_declaration: CRIE RELACAO IDENTIFIER ':' IDENTIFIER .

    $default  reduce using rule 28 (relation_declaration)


State 43

   21 field_declaration: CRIE CAMPO IDENTIFIER ':' type_specifier $@1 . key null

    ','  shift, and go to state 44

    ','       [reduce using rule 13 (key)]
    $default  reduce using rule 13 (key)

    key  go to state 45


State 44

   14 key: ',' . FK '=' IDENTIFIER '.' IDENTIFIER ',' PK
   15    | ',' . PK
   16    | ',' . FK '=' IDENTIFIER '.' IDENTIFIER

    PK  shift, and go to state 46
    FK  shift, and go to state 47


State 45

   21 field_declaration: CRIE CAMPO IDENTIFIER ':' type_specifier $@1 key . null

    ','  shift, and go to state 48

    $default  reduce using rule 17 (null)

    null  go to state 49


State 46

   15 key: ',' PK .

    $default  reduce using rule 15 (key)


State 47

   14 key: ',' FK . '=' IDENTIFIER '.' IDENTIFIER ',' PK
   16    | ',' FK . '=' IDENTIFIER '.' IDENTIFIER

    '='  shift, and go to state 50


State 48

   18 null: ',' . NULO

    NULO  shift, and go to state 51


State 49

   21 field_declaration: CRIE CAMPO IDENTIFIER ':' type_specifier $@1 key null .

    $default  reduce using rule 21 (field_declaration)


State 50

   14 key: ',' FK '=' . IDENTIFIER '.' IDENTIFIER ',' PK
   16    | ',' FK '=' . IDENTIFIER '.' IDENTIFIER

    IDENTIFIER  shift, and go to state 52


State 51

   18 null: ',' NULO .

    $default  reduce using rule 18 (null)


State 52

   14 key: ',' FK '=' IDENTIFIER . '.' IDENTIFIER ',' PK
   16    | ',' FK '=' IDENTIFIER . '.' IDENTIFIER

    '.'  shift, and go to state 53


State 53

   14 key: ',' FK '=' IDENTIFIER '.' . IDENTIFIER ',' PK
   16    | ',' FK '=' IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 54

   14 key: ',' FK '=' IDENTIFIER '.' IDENTIFIER . ',' PK
   16    | ',' FK '=' IDENTIFIER '.' IDENTIFIER .

    ','  shift, and go to state 55

    ','       [reduce using rule 16 (key)]
    $default  reduce using rule 16 (key)


State 55

   14 key: ',' FK '=' IDENTIFIER '.' IDENTIFIER ',' . PK

    PK  shift, and go to state 56


State 56

   14 key: ',' FK '=' IDENTIFIER '.' IDENTIFIER ',' PK .

    $default  reduce using rule 14 (key)
